@@ -7,7 +7,8 @@ History for xm.theme
 xm.theme 0.7.3 (unreleased)
 ---------------------------
 
-- nothing yet
+- Use gradient image in booking-per-month table heading.  [mirella]
+  (Moved from Products.eXtremeManagement trunk by Maurits.)
 
 
 xm.theme 0.7.2 (2008-08-01)
